@@ -62,6 +62,7 @@ $string['autograde_confirm'] = 'You are about to update grades and feedback for 
 $string['autograde_confirm_continue'] = 'Are you shure you wan\'t to continue?';
 $string['autograde_error'] = 'An error occurred during auto-grading.';
 $string['autograde_failed'] = 'Auto-grading failed!';
+$string['autograde_one_success'] = 'Auto-grading successful! 1 submission updated.';
 $string['autograde_success'] = 'Auto-grading successful! {$a} submissions updated.';
 $string['autograde_users_with_unknown_attendance'] = 'ATTENTION: {$a} submissions could NOT be graded automatically due to unknown attendance status!';
 $string['autograde_notsupported'] = 'This scale is not supported by automatic grading.';
